Week 5 and 6 code
Adding in code which uses simulated data to then run a bunch of panel data estimators, along with an additional script to plot goodness of fit statistics across simulation iterations.

Also added in a long tutorial on using ggplot and made some changes to lecture 5 to improve notation.

--- a/code/week_4/hours_worked_income_group.Rmd
+++ b/code/week_4/hours_worked_income_group.Rmd
@@ -49,7 +49,7 @@ setnames(cps, names(cps), c("year", "month", "hhid", "pid", "state_fip",
 cps <- cps[group_quarters == 1,]
 
 ####################
-# Record variables #
+# Recode variables #
 ####################
 
 # I created a state fips dataset to merge on state names using the codebook.
